--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -114,7 +114,7 @@ $lightGreen: #b9e7e7;
       }
     }
 
-    //Footer
+    // Footer
     footer {
       margin-top: 100px;
       padding: 20px;
@@ -124,6 +124,50 @@ $lightGreen: #b9e7e7;
       justify-content: space-between;
       img {
         height: 50px;
+      }
+    }
+
+    // Home
+    .home {
+      .posts {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        gap: 150px;
+
+        .post {
+          display: flex;
+          gap: 100px;
+
+          &:nth-child(2n + 1) {
+            flex-direction: row-reverse;
+          }
+
+          .img {
+            flex: 2;
+            position: relative;
+
+            &::after {
+              content: "";
+              width: 100%;
+              height: 100%;
+              background-color: $lightGreen;
+              top: 20px;
+              left: -20px;
+              position: absolute;
+              z-index: -1;
+            }
+
+            img {
+              width: 100%;
+              max-height: 400px;
+              object-fit: cover;
+            }
+          }
+          .content {
+            flex: 3;
+          }
+        }
       }
     }
   }
