--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -3,7 +3,7 @@ $lightGreen: #b9e7e7;
 .app {
   display: flex;
   justify-content: center;
-  border: 1px solid red;
+  // border: 1px solid red;
 
   .container {
     width: 1024px;
@@ -69,7 +69,7 @@ $lightGreen: #b9e7e7;
         display: flex;
         justify-content: space-between;
         padding: 10px 0;
-        border: 1px red solid;
+        // border: 1px red solid;
         align-items: center;
 
         .logo {
@@ -165,7 +165,35 @@ $lightGreen: #b9e7e7;
             }
           }
           .content {
+            // border: 1px solid black;
             flex: 3;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            h1 {
+              font-size: 48px;
+            }
+
+            p {
+              font-size: 18px;
+            }
+
+            button {
+              width: max-content;
+              padding: 10px 20px;
+              border: none;
+              cursor: pointer;
+              background-color: white;
+              border: 1px solid $lightGreen;
+              color: teal;
+
+              &:hover {
+                border: 1px solid white;
+                background-color: $lightGreen;
+                color: black;
+              }
+            }
           }
         }
       }
